traefik/auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-middleware
  namespace: msa
spec:
  forwardAuth:
    address: http://localhost/api/v1/auth/validate-token
    trustForwardHeader: false
    authResponseHeaders:
      - X-User-Id
      - X-Internal
      - X-Authenticated
