traefik/cors-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors
  namespace: msa
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - PATCH
      - OPTIONS
    accessControlAllowHeaders:
      - Content-Type
      - Authorization
      - X-Requested-With
      - Accept
    accessControlAllowOriginList:
      - "http://localhost:4243"
    accessControlMaxAge: 100
    addVaryHeader: true
    accessControlAllowCredentials: true
