traefik/ws-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ws-middleware
  namespace: msa
spec:
  replacePathRegex:
    regex: ^/ws/(?:user|chat|main-game|match-game)/(.*)
    replacement: /socket.io/${1}
