traefik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
  namespace: msa
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/api/v1/auth`)
      kind: Rule
      middlewares:
        - name: cors
      services:
        - name: auth-server
          port: 3000
          namespace: msa

    - match: PathPrefix(`/api/v1/users`)
      kind: Rule
      middlewares:
        - name: cors
        - name: auth-middleware
      services:
        - name: user-server
          port: 3000
          namespace: msa

    - match: PathPrefix(`/api/v1/friends`)
      kind: Rule
      middlewares:
        - name: cors
        - name: auth-middleware
      services:
        - name: user-server
          port: 3000
          namespace: msa

    - match: PathPrefix(`/ws/user`)
      kind: Rule
      middlewares:
        - name: ws-middleware
      services:
        - name: user-server
          port: 3000
          namespace: msa
