traefik/monitor-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger-ingress
  namespace: monitor
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`grafana.pingpong.n-e.kr`)
      kind: Rule
      services:
        - name: grafana
          port: 80
